fixed about section overflow

--- a/shuttler/src/components/AboutCard/AboutCard.css
+++ b/shuttler/src/components/AboutCard/AboutCard.css
@@ -7,6 +7,8 @@
   padding-left: 20px;
   padding-right: 20px;
   height: 100%;
+  margin: auto;
+  max-width: 600px;
 }
 @media only screen and (max-width: 862px) {
   .card {
