--- a/shuttler/src/components/AboutSection/AboutSection.css
+++ b/shuttler/src/components/AboutSection/AboutSection.css
@@ -2,7 +2,7 @@
   display: grid;
   margin: 8%;
   grid-template-rows: auto auto;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 .about-header {
   grid-column: 1/4;
